API defined and implemented
