# src/main/scala/org/zalando/komang/api/ApiModel.scala
@@ -1,8 +1,23 @@
 package org.zalando.komang.api
 
+import java.util.UUID
+
+import org.zalando.komang.api.ApiModel.Error._
 import org.zalando.komang.model.Model._
 
 object ApiModel {
+  case class Error(errorId: ErrorId, code: ErrorCode, internalCode: InternalErrorCode, description: ErrorDescription)
+
+  object Error {
+    case class ErrorId(value: UUID)
+
+    case class ErrorCode(value: Int)
+
+    case class InternalErrorCode(value: String)
+
+    case class ErrorDescription(value: UUID)
+  }
+
   case class ApplicationDraft(name: ApplicationName)
 
   case class ApplicationUpdate(name: ApplicationName)
@@ -19,5 +34,6 @@ object ApiModel {
 
   case class ProfileNotFoundException(applicationId: ApplicationId, profileId: ProfileId) extends Exception
 
-  case class ConfigNotFoundException(applicationId: ApplicationId, profileId: ProfileId, configId: ConfigId) extends Exception
+  case class ConfigNotFoundException(applicationId: ApplicationId, profileId: ProfileId, configId: ConfigId)
+      extends Exception
 }
