# src/main/scala/org/zalando/komang/model/command/Commands.scala
@@ -2,7 +2,9 @@ package org.zalando.komang.model.command
 
 import org.zalando.komang.model.Model._
 
-sealed trait Command
+sealed trait Command {
+  def applicationId: ApplicationId
+}
 
 final case class CreateApplicationCommand(applicationId: ApplicationId, name: ApplicationName) extends Command
 
@@ -14,6 +16,18 @@ final case class CreateProfileCommand(applicationId: ApplicationId, profileId: P
 final case class UpdateProfileCommand(applicationId: ApplicationId, profileId: ProfileId, name: ProfileName)
     extends Command
 
-final case class CreateConfigCommand(profileId: ProfileId, configId: ConfigId, name: ConfigName, `type`: ConfigType, value: ConfigValue) extends Command
+final case class CreateConfigCommand(applicationId: ApplicationId,
+                                     profileId: ProfileId,
+                                     configId: ConfigId,
+                                     name: ConfigName,
+                                     `type`: ConfigType,
+                                     value: ConfigValue)
+    extends Command
 
-final case class UpdateConfigCommand(profileId: ProfileId, configId: ConfigId, name: Option[ConfigName], `type`: Option[ConfigType], value: Option[ConfigValue]) extends Command
+final case class UpdateConfigCommand(applicationId: ApplicationId,
+                                     profileId: ProfileId,
+                                     configId: ConfigId,
+                                     name: Option[ConfigName],
+                                     `type`: Option[ConfigType],
+                                     value: Option[ConfigValue])
+    extends Command
